--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "cheat_sheets/server_script.md": ["## 目次"],
         "cheat_sheets/script.md": ["## 目次"],
         "cheat_sheets/javascript.md": ["## 目次"],
+        "server_script/README.md": ["## 目次"],
     }
 }
